[gd_scene load_steps=8 format=2]

[ext_resource path="res://demos/adventure/actors/actor.gd" type="Script" id=1]
[ext_resource path="res://demos/adventure/actors/actor_mat.tres" type="Material" id=2]
[ext_resource path="res://addons/PWK/nodes/StateMachine/StateMachine.gd" type="Script" id=8]
[ext_resource path="res://demos/adventure/actors/actor_idle.gd" type="Script" id=9]
[ext_resource path="res://demos/adventure/actors/WalkTo.gd" type="Script" id=10]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.5, 0.5, 0.1 )

[sub_resource type="QuadMesh" id=2]
size = Vector2( 1.5, 1.5 )

[node name="Actor" type="KinematicBody"]
collision_mask = 2
script = ExtResource( 1 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 8 )
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 9 )

[node name="WalkTo" type="Node" parent="StateMachine"]
script = ExtResource( 10 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="walkTween" type="Tween" parent="."]

[node name="Sprite" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 0.990268, 0.139173, 0, -0.139173, 0.990268, 0, 0.234774, 0 )
material_override = ExtResource( 2 )
use_in_baked_light = true
mesh = SubResource( 2 )
material/0 = null

[node name="Animation" type="AnimationPlayer" parent="."]
